/*
 * Copyright (c) 2023 RobustMQ Team
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package mqtt;

service MqttService {
  //
  rpc ShareSub(ShareSubRequest) returns(ShareSubReply){}

}

message ShareSubRequest{
    string share_sub_name = 1;
    string cluster_name = 2;
}

message ShareSubReply{
    uint64 broker_id = 1;
    string broker_ip = 2;
    string extend_info = 3;
}